Add JBurn's new release. Removed Nifty Music & the crappy Site builder footer.

--- a/nicepage.css
+++ b/nicepage.css
@@ -11992,6 +11992,9 @@ section.u-image:not(.u-hover-box),
   min-height: fit-content;
   max-width: 100%;
 }
+.u-layout-row.u-layout-center-horizontal {
+  justify-content: center;
+}
 .u-layout-cell {
   position: relative;
   display: flex;
@@ -18643,9 +18646,9 @@ a.pswp__share--download:hover {
   --animation-custom_in-scale: 1;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-opacity: 0;
-  
-  
-  
+
+
+
 }
 @keyframes bounce {
   from,
@@ -20158,11 +20161,11 @@ a.pswp__share--download:hover {
 }
 /*end-commonstyles animation*/
 .animated.u-absolute-hcenter {
-  
+
   --animation-custom_in-translate_x: -50% !important;
 }
 .animated.u-absolute-vcenter {
-  
+
   --animation-custom_in-translate_y: -50% !important;
 }
 .u-cookies-consent {
@@ -38382,8 +38385,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #fb01bf !important;
         }
 
-        
-        
+
+
         .u-custom-color-2,
         .u-body.u-custom-color-2,
         section.u-custom-color-2:before,
@@ -38448,8 +38451,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #cac8ca !important;
         }
 
-        
-        
+
+
         .u-custom-color-3,
         .u-body.u-custom-color-3,
         section.u-custom-color-3:before,
@@ -38514,8 +38517,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #c1ff41 !important;
         }
 
-        
-        
+
+
         .u-custom-color-4,
         .u-body.u-custom-color-4,
         section.u-custom-color-4:before,
@@ -38580,8 +38583,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #a100ff !important;
         }
 
-        
-        
+
+
         .u-custom-color-5,
         .u-body.u-custom-color-5,
         section.u-custom-color-5:before,
@@ -38646,8 +38649,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #41e6ff !important;
         }
 
-        
-        
+
+
         .u-custom-color-6,
         .u-body.u-custom-color-6,
         section.u-custom-color-6:before,
@@ -38712,8 +38715,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #f0ff00 !important;
         }
 
-        
-        
+
+
         .u-custom-color-7,
         .u-body.u-custom-color-7,
         section.u-custom-color-7:before,
@@ -38778,8 +38781,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #060406 !important;
         }
 
-        
-        
+
+
         .u-custom-color-9,
         .u-body.u-custom-color-9,
         section.u-custom-color-9:before,
@@ -38844,8 +38847,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #e090ff !important;
         }
 
-        
-        
+
+
         .u-custom-color-27,
         .u-body.u-custom-color-27,
         section.u-custom-color-27:before,
@@ -38910,8 +38913,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #cfc1ce !important;
         }
 
-        
-        
+
+
         .u-custom-color-45,
         .u-body.u-custom-color-45,
         section.u-custom-color-45:before,
@@ -38976,8 +38979,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #64004c !important;
         }
 
-        
-        
+
+
         .u-custom-color-47,
         .u-body.u-custom-color-47,
         section.u-custom-color-47:before,
@@ -39042,8 +39045,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #453c3b !important;
         }
 
-        
-        
+
+
         .u-custom-color-48,
         .u-body.u-custom-color-48,
         section.u-custom-color-48:before,
@@ -39108,9 +39111,9 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #425160 !important;
         }
 
-        
 
-        
+
+
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
@@ -39157,8 +39160,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #e201ac !important;
         }
-        
-        
+
+
         .u-border-custom-color-2,
         .u-separator-custom-color-2:after
         {
@@ -39205,8 +39208,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #b6b4b6 !important;
         }
-        
-        
+
+
         .u-border-custom-color-3,
         .u-separator-custom-color-3:after
         {
@@ -39253,8 +39256,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #b7ff21 !important;
         }
-        
-        
+
+
         .u-border-custom-color-4,
         .u-separator-custom-color-4:after
         {
@@ -39301,8 +39304,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #9100e6 !important;
         }
-        
-        
+
+
         .u-border-custom-color-5,
         .u-separator-custom-color-5:after
         {
@@ -39349,8 +39352,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #21e2ff !important;
         }
-        
-        
+
+
         .u-border-custom-color-6,
         .u-separator-custom-color-6:after
         {
@@ -39397,8 +39400,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #d8e600 !important;
         }
-        
-        
+
+
         .u-border-custom-color-7,
         .u-separator-custom-color-7:after
         {
@@ -39445,8 +39448,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #050405 !important;
         }
-        
-        
+
+
         .u-border-custom-color-9,
         .u-separator-custom-color-9:after
         {
@@ -39493,8 +39496,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #d568ff !important;
         }
-        
-        
+
+
         .u-border-custom-color-27,
         .u-separator-custom-color-27:after
         {
@@ -39541,8 +39544,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #beaabc !important;
         }
-        
-        
+
+
         .u-border-custom-color-45,
         .u-separator-custom-color-45:after
         {
@@ -39589,8 +39592,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #5a0044 !important;
         }
-        
-        
+
+
         .u-border-custom-color-47,
         .u-separator-custom-color-47:after
         {
@@ -39637,8 +39640,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #3e3635 !important;
         }
-        
-        
+
+
         .u-border-custom-color-48,
         .u-separator-custom-color-48:after
         {
@@ -39685,9 +39688,9 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #3b4956 !important;
         }
-        
 
-        
+
+
         .u-text-custom-color-1,
         li.active > a.u-button-style.u-text-custom-color-1,
         li.active > a.u-button-style.u-text-custom-color-1[class*="u-border-"],
@@ -39754,8 +39757,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #fb01bf !important;
         }
-        
-        
+
+
         .u-text-custom-color-2,
         li.active > a.u-button-style.u-text-custom-color-2,
         li.active > a.u-button-style.u-text-custom-color-2[class*="u-border-"],
@@ -39822,8 +39825,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #cac8ca !important;
         }
-        
-        
+
+
         .u-text-custom-color-3,
         li.active > a.u-button-style.u-text-custom-color-3,
         li.active > a.u-button-style.u-text-custom-color-3[class*="u-border-"],
@@ -39890,8 +39893,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #c1ff41 !important;
         }
-        
-        
+
+
         .u-text-custom-color-4,
         li.active > a.u-button-style.u-text-custom-color-4,
         li.active > a.u-button-style.u-text-custom-color-4[class*="u-border-"],
@@ -39958,8 +39961,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #a100ff !important;
         }
-        
-        
+
+
         .u-text-custom-color-5,
         li.active > a.u-button-style.u-text-custom-color-5,
         li.active > a.u-button-style.u-text-custom-color-5[class*="u-border-"],
@@ -40026,8 +40029,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #41e6ff !important;
         }
-        
-        
+
+
         .u-text-custom-color-6,
         li.active > a.u-button-style.u-text-custom-color-6,
         li.active > a.u-button-style.u-text-custom-color-6[class*="u-border-"],
@@ -40094,8 +40097,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #f0ff00 !important;
         }
-        
-        
+
+
         .u-text-custom-color-7,
         li.active > a.u-button-style.u-text-custom-color-7,
         li.active > a.u-button-style.u-text-custom-color-7[class*="u-border-"],
@@ -40162,8 +40165,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #060406 !important;
         }
-        
-        
+
+
         .u-text-custom-color-9,
         li.active > a.u-button-style.u-text-custom-color-9,
         li.active > a.u-button-style.u-text-custom-color-9[class*="u-border-"],
@@ -40230,8 +40233,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #e090ff !important;
         }
-        
-        
+
+
         .u-text-custom-color-27,
         li.active > a.u-button-style.u-text-custom-color-27,
         li.active > a.u-button-style.u-text-custom-color-27[class*="u-border-"],
@@ -40298,8 +40301,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #cfc1ce !important;
         }
-        
-        
+
+
         .u-text-custom-color-45,
         li.active > a.u-button-style.u-text-custom-color-45,
         li.active > a.u-button-style.u-text-custom-color-45[class*="u-border-"],
@@ -40366,8 +40369,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #64004c !important;
         }
-        
-        
+
+
         .u-text-custom-color-47,
         li.active > a.u-button-style.u-text-custom-color-47,
         li.active > a.u-button-style.u-text-custom-color-47[class*="u-border-"],
@@ -40434,8 +40437,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #453c3b !important;
         }
-        
-        
+
+
         .u-text-custom-color-48,
         li.active > a.u-button-style.u-text-custom-color-48,
         li.active > a.u-button-style.u-text-custom-color-48[class*="u-border-"],
@@ -40505,114 +40508,114 @@ a.u-link.u-text-hover-grey-90:hover {
 
         .u-body
         {
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         --theme-sheet-width-xl: 1140px;
         --theme-sheet-width-lg: 940px;
         --theme-sheet-width-md: 720px;
         --theme-sheet-width-sm: 540px;
         --theme-sheet-width-xs: 340px;
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
         }
 
         /** common-rules **/
@@ -40795,7 +40798,7 @@ a.u-link.u-text-hover-grey-90:hover {
         /*end-media rules*/
         /** publish-rules **/
 
-        
+
 
         /** cms-rules **/
         /*begin-responsive rules*/
@@ -40903,7 +40906,7 @@ a.u-link.u-text-hover-grey-90:hover {
         color: #ffffff;
         }
         /** alt-color-rules **/
-    
+
 
 
 /*end-variables sitestylecss*/
@@ -41084,6 +41087,6 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 
- /*begin-variables base-font-size*/ 
+ /*begin-variables base-font-size*/
  html { font-size: 16px; }
  /*end-variables base-font-size*/
